<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10" />

    <TextView
        android:id="@+id/NumberOfPeopleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NumberOfPeopleTextView" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/NumberOfPeopleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#979090"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Entry_Box_Default_String"
        android:inputType="number"
        android:autofillHints="" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5" />

    <Button
        android:id="@+id/StartRoundButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prepare_round_button_text" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10" />

</LinearLayout>